# bedriftsgrafen.no

./: .cursorrules  .env.example  .gitignore  CONTRIBUTING.md  FUTURE_IDEAS.md  GEMINI.md  IMPORT_GUIDE.md  LICENSE  OPERATIONS.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.prod.yml  lighthouserc.cjs  optimized_prompt.md  package-lock.json  package.json  query_municipalities.py  test-dev-isolated.sh
backend/: .dockerignore  .ruff.toml  API_ENDPOINTS.md  Dockerfile  Dockerfile.prod  README.md  alembic.ini  database.py  exceptions.py  limiter.py  main.py  middleware.py  models_import.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 09bf64606e67_update_municipality_stats_with_revenue.py  0ae953d2a491_fix_operating_margin_outliers.py  1b8a1659d72f_add_registrert_i_foretaksregisteret_to_.py  1d8fed3a8420_add_performance_indexes.py  20d47b99003d_proven_schema_parity.py  2f729230c375_add_company_municipality_index.py  362b91673eb9_add_postnummer_index.py  3ad69e2d8e85_add_registration_dates_to_companies.py  3b23c18900f4_add_registration_date_and_data_to_.py  42d2781397f8_fix_operating_margin_calculation.py  4cafaf285162_create_materialized_views.py  4fde8b40baa7_add_sitemap_optimization_indices.py  537c623d71c5_add_performance_indexes_to_stats_views.py  5a64c78c1fb1_initial_migration_create_base_schema.py  716ff549c3f8_add_roles_table.py  7a496d410589_add_municipality_performance_.py  9ad5a26519a9_add_expanded_register_flags.py  9d8e958cd874_manual_add_sync_errors.py  a1b2c3d4e5f6_add_industry_stats_view.py  a1b2c3d4e5f7_expand_latest_financials_year_filter.py  a69b80bb0302_add_partial_index_for_financial_polling.py  ad4923e_add_konkurs_index.py  b2c3d4e5f6a7_add_missing_stats_views.py  c3d4e5f6g7h8_restore_industry_stats.py  d4ab2eb298ea_add_konkursdato_and_formaal.py  d9c85dd327d1_add_geocoded_count_index.py  e23a88891398_add_last_polled_roles_to_bedrifter.py  e5bc3fc409fb_optimize_financial_indexes.py  ef106c015add_fix_margin_outliers_v2.py  f3ead7bea13d_add_industry_subclass_stats_view.py  f6c7d8e9a0b1_add_industry_filter_indexes.py  f7a8b9c0d1e2_add_formaal_to_search.py  ff2f220780cb_add_operating_margin_to_latest_.py  g7h8i9j0k1l2_update_industry_stats_bankruptcies.py  h8i9j0k1l2m3_fix_bankruptcies_query.py  i9j0k1l2m3n4_include_all_except_kbo.py  j0k1l2m3n4o5_add_county_stats_view.py  k1l2m3n4o5p6_add_municipality_stats_view.py  m1n2o3p4q5r6_add_kommune_sort_index.py  n2o3p4q5r6s7_include_kbo_in_stats.py  (+6 more)
backend/constants/: __init__.py  counties.py  municipality_coords.py  nace.py  org_forms.py
backend/data/: postnummer.csv
backend/dependencies/: company_filters.py
backend/maintenance/: sync_brreg_updates.py
backend/models/: __init__.py  accounting.py  company.py  geo.py  stats.py  sync_error.py  system.py
backend/repositories/: __init__.py  accounting_repository.py  company_filter_builder.py  role_repository.py  stats_repository.py  subunit_repository.py  system_repository.py
backend/repositories/company/: __init__.py  base.py  crud.py  lookups.py  queries.py  repository.py  search.py  stats.py
backend/routers/: __init__.py  admin_import.py  health.py  sitemap.py
backend/routers/v1/: __init__.py  companies.py  municipality.py  og_image.py  people.py  stats.py  trends.py
backend/schemas/: __init__.py  benchmark.py  brreg.py  companies.py  municipality.py  stats.py
backend/scripts/: audit_subunits.py  import_roles_bulk.py  recalculate_kpis.py  repair_data.py  update_organisasjonsform.py
backend/scripts/debug_tools/: db_debug.py  inspect_bankrupt.py
backend/services/: __init__.py  base_external_service.py  brreg_api_service.py  bulk_import_service.py  company_service.py  dtos.py  export_service.py  geocoding_batch_service.py  geocoding_service.py  kpi_service.py  nace_service.py  rate_limits.py  repair_service.py  response_models.py  role_service.py  scheduler.py  seo_service.py  ssb_service.py  stats_service.py  update_service.py
backend/tests/: conftest.py
backend/tests/factories/: __init__.py  company_factory.py  (+1 more)
backend/utils/: auth.py  cache.py  caching.py  county_codes.py  logging_config.py  nace_codes.py  response_builders.py
(+390 files in other folders)
