[project]
name = "bedriftsgrafen-backend"
version = "1.0.0"
description = "Backend for Bedriftsgrafen.no"
requires-python = ">=3.11"

[tool.ruff]
# Same as line-length in Black
line-length = 120
target-version = "py311"

# Exclude test files and migrations from some checks
exclude = [
    "alembic/versions/*.py",
    "__pycache__",
    ".git",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Enable common rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (FastAPI uses this)
    "B904",   # raise without from (sometimes intentional)
    "ARG001", # unused function argument (common in repos/services)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "S101"]  # Allow unused args and asserts in tests
"alembic/*" = ["E501", "I001"]  # Allow long lines and unordered imports in migrations

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # SQLAlchemy uses Any extensively
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = false
ignore_missing_imports = true
plugins = ["sqlalchemy.ext.mypy.plugin"]
exclude = [
    "alembic/",
    "tests/",
    "scripts/",
    "ops_scripts/",
]

[[tool.mypy.overrides]]
module = "alembic.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "services.kpi_service",
    "services.stats_service",
    "services.company_service",
    "services.bulk_import_service",
    "services.geocoding_batch_service",
    "repositories.company.*",
    "repositories.stats_repository",
    "repositories.accounting_repository",
    "routers.v1.stats",
    "main",
]
# SQLAlchemy ORM patterns cause many false positives with:
# - Column types (Mapped[_N] vs float)
# - Relationship inference
# - Result/Row types
disable_error_code = ["arg-type", "return-value", "assignment", "union-attr", "operator", "attr-defined", "misc", "var-annotated", "index", "truthy-function", "has-type"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"
